Flex utility: Fix item alignment property values

--- a/utilities/util-layout-flex.less
+++ b/utilities/util-layout-flex.less
@@ -172,12 +172,12 @@
     .@{flex-ns}flex-item-center@{breakpoint} { margin-right: auto; margin-left: auto; }    
     .@{flex-ns}flex-item-end@{breakpoint} { margin-@{start}: auto; }
 
-    .@{flex-ns}flex-item-x-stretch@{breakpoint} { align-self: flex-stretch; }
+    .@{flex-ns}flex-item-x-stretch@{breakpoint} { align-self: stretch; }
     .@{flex-ns}flex-item-x-start@{breakpoint} { align-self: flex-start; }
-    .@{flex-ns}flex-item-x-center@{breakpoint} { align-self: flex-center; }    
+    .@{flex-ns}flex-item-x-center@{breakpoint} { align-self: center; }    
     .@{flex-ns}flex-item-x-end@{breakpoint} { align-self: flex-end; }
-    .@{flex-ns}flex-item-x-baseline@{breakpoint} { align-self: flex-baseline; }
-    .@{flex-ns}flex-item-x-auto@{breakpoint} { align-self: flex-auto; }
+    .@{flex-ns}flex-item-x-baseline@{breakpoint} { align-self: baseline; }
+    .@{flex-ns}flex-item-x-auto@{breakpoint} { align-self: auto; }
 }
 
 & when not (@flex-item-alignment-breakpoints = false) {
